align fix

--- a/src/index.css
+++ b/src/index.css
@@ -154,7 +154,7 @@ table {
 }
 
 .streamContainer {
-	margin: 80px 0 0 80px;
+	margin: 90px 0 0 130px;
 	position: fixed;
 	top: 50px;
 }
